# fluctra

./: Anchor.toml  DESIGN_SYSTEM.md  Fluctra Meridian Design System 1.0  package-lock.json  package.json  project plan.txt  svelte docs.txt  tailwind 4 docs  vite.config.ts
programs/fluctra-launch/: Cargo.toml
programs/fluctra-launch/src/: lib.rs
scripts/: generateIdl.js  generateIdlFromFile.js
src/: app.css  app.html
src/components/: AIInsightCard.svelte  Badge.svelte  Button.svelte  Card.svelte  Input.svelte  Layout.svelte  NavLink.svelte  ProgressBar.svelte  Select.svelte  StatCard.svelte  WalletConnect.svelte
src/lib/components/: AIInsightCard.svelte  Badge.svelte  Button.svelte  Card.svelte  HeroBackground.svelte  Input.svelte  Layout.svelte  NavLink.svelte  ProgressBar.svelte  Select.svelte  StatCard.svelte  WalletConnect.svelte
src/lib/solana/: fluctra-launch.ts  wallet.ts
src/lib/solana/idl/: fluctra_launch.json
src/lib/solana/types/: fluctra_launch.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/analytics/: +page.svelte
src/routes/create-discount/: +layout.svelte  +page.svelte  formStore.ts
src/routes/create-discount/step1/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/discover/: +page.svelte
src/routes/my-pools/: +page.svelte
wireframes/: analytics dashboard.html  combined_wireframes.html  creator dashboard.html  discount pool creation 1.html  discount pool creation 2.html  discount pool creation 3.html  discovery & filtering interface.html  wallet connection.html
(+2 files in other folders)
