[package]
name = "fluctra-launch"
version = "0.1.0"
description = "Fluctra Launch - Token Discount Pool Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fluctra_launch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
