[package]
name = "fluctra-launch"
version = "0.1.0"
description = "Fluctra Launch - Token Discount Pool Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fluctra_launch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-idl = ["anchor-lang/anchor-idl"]
anchor-idl-gen = ["anchor-lang/anchor-idl-gen"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["anchor-idl", "anchor-idl-gen"] }
anchor-spl = { version = "0.30.0", features = ["anchor-idl"] }
